2009-06-01  Per Bothner  <per@bothner.com>

	* LispReader.java (readCharacter): Fix two bugs so we can
	read "long" hex character constants, such as #\x10ffff. 

2009-05-30  Per Bothner  <per@bothner.com>

	New support for regex Pattern types and literal syntax.
	* LangObjType.java (regexType): New static LangObjType, bound to
	java.util.regex.Pattern.
	* ReaderString.java (readString): New static method.
	* LispReader.java (readEscape): Handle backslash-newline also
	for other whitespace after the backslash.
	* ReaderDispatchMisc.java (readRegex): New method.
	(read): On '/' call readRegex.
	* ReaderDispatch.java (create):  Map '/' to ReaderDispatchMisc.

2009-04-21  Per Bothner  <per@bothner.com>

	* LispReader.java (parseNumber): Translate 'd'/'s'/... exponent
	marker to the standard 'e' before calling parseDouble.

2009-03-10  Per Bothner  <per@bothner.com>

	* LispReader.java (initialColonIsKeyword, finalColonIsKeyword,
	setInitialColonIsKeyword, setFinalColonIsKeyword): Move to ...
	* ReadTable.java: ... here.
	* LispLanguage.java (getLexer): Revert 03-07 change.

2009-03-08  Per Bothner  <per@bothner.com>

	* ReaderDispatchMisc.java (read): Support SRFI-62 S-expression comments.
	* ReaderDispatch.java (create): Likewise.

2009-03-07  Per Bothner  <per@bothner.com>

	* LispReader.java (readEscape): Implement R6RS behavior for
	backslash-whitespace - i.e. skip initial whitespace on next line.

	* LispReader.java (readCharacter): Handle hex escapes.

	* LispReader.java (initialColonIsKeyword, finalColonIsKeyword):
	Change defaults to false.
	(setInitialColonIsKeyword,setFinalColonIsKeyword): New methods.
	* LispLanguage.java (getLexer): Remove method - now in subclasses.

2009-03-01  Per Bothner  <per@bothner.com>

	* LispLanguage.java (getCompilation): Update to pass NameLookup.

2008-11-13  Per Bothner  <per@bothner.com>

	* LangPrimType.java: Update to use Type.byteType instead of
	semi-deprecated Type.byte_type.

2008-06-08  Per Bothner  <per@bothner.com>
