@@ -1,3 +1,8 @@
+2009-07-11  Per Bothner  <per@bothner.com>
+
+	* srfi-69-test.scm: Add a string-copy, since we now intern
+	string literals, and the test assumes we don't.
+
 2009-07-10  Per Bothner  <per@bothner.com>
 	    Helmut Eller  <eller.helmut@gmail.com>
 
