@@ -1,3 +1,9 @@
+2009-07-10  Per Bothner  <per@bothner.com>
+
+	* ReaderString.java (readString): Intern the result string.
+	This is an alternative/additional fix for Savannah bug #26993
+	"String literals in syntax-rules don't match".
+
 2009-06-01  Per Bothner  <per@bothner.com>
 
 	* LispReader.java (readCharacter): Fix two bugs so we can
